# akari-bot-core

./: .gitignore  .pre-commit-config.yaml  README.md  bot.py  pyproject.toml  requirements.txt
.github/workflows/: Sync-from-AB-to-ABC.yml  Sync.yml
assets/private/ntqq/: cache_restart_author
bots/api/: bot.py
bots/discord/slash/: bilibili.py  coin.py  core.py  dice.py  exchange_rate.py  game.py
config/: __init__.py  config.toml.example
core/: component.py  petal.py
core/console/: message.py
core/locales/: en_us.json  zh_tw.json
core/parser/: message.py
core/types/message/: __init__.py
core/types/module/: __init__.py
core/utils/: cooldown.py  game.py  web_render.py
database/: __init__.py  tables.py
docs/: DEPLOY.md  DEPLOY_Docker.md
modules/core/: analytics.py  modules.py  su_utils.py  utils.py
