[tool.poetry]
name = "akari-bot"
version = "0.1.0"
description = ""
authors = [
    "OasisAkari <oasisakari@teahou.se>",
    "Dianliang233 <dianliang@teahou.se>",
    "DoroWolf <dorowolf@tehou.se>",
    "nullcat <null@teahou.se>",
    "_LittleC_ <i@ltlec.com>",
]
license = "AGPL-3.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12.0"
Pillow = "10.3.0"
py-cord = "^2.5.0"
aiohttp = "3.9.5"
attrs = "^23.1.0"
simpleeval = "^0.9.12"
ujson = "5.9.0"
psutil = "5.9.8"
loguru = "0.7.2"
toml = "0.10.2"
tenacity = "8.2.3"
apscheduler = "3.10.4"
sqlalchemy = "2.0.29"
aioconsole = "0.7.0"
aiofile = "3.8.8"
attr = "0.3.2"
fastapi = "0.110.2"
filetype = "1.2.0"
khl = "2.0.2"
matplotlib = "3.8.4"
nio = "3.4.2"
numpy = "1.26.4"
oss2 = "2.18.4"
pyjwt = "2.8.0"
python-dateutil = "2.9.0.post0"
tabulate = "0.9.0"
urllib3 = "2.2.1"
uvicorn = "0.29.0"
aiocqhttp = "^1.4.4"
py-cpuinfo = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.pyright]
reportUndefinedVariable = 'error'